2002-08-05  Bart Veer  <bartv@tymora.demon.co.uk>

	* cdl/kernel.cdl, include/kapidata.h, include/kapi.h:
	Allow configurations with the kernel but no malloc

2002-06-05  Gary Thomas  <gary@chez-thomas.org>

	* include/kapi.h: Fix prototype (to allow builds with net stack).

2002-05-24  Jesper Skov  <jskov@redhat.com>

	* cdl/kernel.cdl: Fix typo.

2002-05-23  Jonathan Larmour  <jlarmour@redhat.com>

	* include/kapi.h: Expose new cyg_thread_add_destructor and
	cyg_thread_rem_destructor APIs.

	* include/kapidata.h (struct Cyg_Destructor_Entry):
	Change CYG_ADDRWORD to more correct cyg_addrword_t.

	* include/thread.hxx (class Cyg_Thread): add_destructor and
	rem_destructor are onyl static when not per-thread.

	* include/thread.inl (add_destructor): Don't need to lock and unlock
	scheduler when destructors are per-thread.
	(rem_destructor): Ditto.

	* src/common/thread.cxx (exit): No need to lock scheduler when
	calling destructors.

	* doc/kernel.sgml: Document thread destructor API.

2002-05-23  Nick Garnett  <nickg@redhat.com>

	* doc/kernel.sgml: Some more edits to the kernel documentation:
	changed all references to message boxes to mail boxes, clarified
	some thing in various places, fixed a few typos.

2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/kernel.cdl: Cleaned up kernel tests rule. Also remove tests
	depending on the C API when its not present. And skip dhrystone
	test when debug or instrumentation is enabled.

	* tests/tm_basic.cxx: Fixed warning.

2002-05-22  Nick Garnett  <nickg@redhat.com>

	* doc/kernel.sgml:
	Fixed up SMP documentation.
	Rewrote condtion variable documentation to make its relationship
	to mutexes more apparent.

2002-05-22  Jesper Skov  <jskov@redhat.com>

	* tests/smp.cxx: Move inclusion of testaux.hxx to below NA
	checks.

2002-05-21  Bart Veer  <bartv@redhat.com>

	* doc/kernel.sgml:
	Major update to the kernel documentation.

2002-05-21  Jesper Skov  <jskov@redhat.com>
